Fix clipping text on frontpage (#33478)

--- a/sass/homeassistant/_overrides.scss
+++ b/sass/homeassistant/_overrides.scss
@@ -620,7 +620,6 @@ article.page,
 article.listing {
   font-size: 1.125em;
   line-height: 1.6;
-  overflow: hidden;
 
   img,
   table {
